[package]
name = "rld2hack"
version = "0.1.0"
authors = ["Riley Labrecque"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour     = "0.7"
rlwindows  = { path = "../rlwindows" }
widestring = "0.4"
winapi     = { version = "0.3", features = [ "consoleapi", "debugapi", "impl-default" ] }
