[package]
name = "rlinjector"
version = "0.1.0"
authors = [ "Riley Labrecque" ]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ctrlc      = { version = "3.1.7", features = [ "termination" ] }
pe         = { path = "./pe" }
rlwindows  = { path = "../rlwindows" }
structopt  = "0.3"
widestring = "0.4"
winapi     = { version = "0.3", features = [ "tlhelp32", "handleapi", "securitybaseapi", "synchapi", "psapi", "memoryapi", "impl-default" ] }
